--- a/main.css
+++ b/main.css
@@ -51,8 +51,8 @@
   padding: 2px 3px;
   background-color: cornflowerblue;
   border-radius: 2px;
-  color: white;
-  font-size: 12px;
+  color: red;
+  font-size: 14px;
   vertical-align: middle;
 }
 .title .time {
