--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
   color: #fff;
   text-align: center;
   line-height: 40px;
-  font-size: 14px;
+  font-size: 16px;
 }
 .banner span {
   line-height: 40px;
@@ -33,7 +33,7 @@
   line-height: 15px;
   padding-left: 2px;
   padding-right: 2px;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .title {
@@ -42,7 +42,7 @@
   padding-bottom: 10px;
 }
 .title p {
-  font-size: 16px;
+  font-size: 18px;
 }
 .appointment {
   display: inline-block;
@@ -57,13 +57,14 @@
 }
 .title .time {
   margin-top: 10px;
-  font-size: 14px;
+  font-size: 15px;
   color: #c8c8c8
 }
 
 .details {
   margin: 20px;
   font-size: 15px;
+  color:#3b3b3b
 }
 
 .details p {
@@ -82,3 +83,13 @@
   top: 3px;
   border-right: 4px solid #fa5056;
 }
+.font_black{
+	font-weight: bold;
+	width:100px;
+}
+#a_m div{display: flex;}
+#a_m div span{width: 100px;}
+#a_m div p{flex: 1;}
+#p_m div{display: flex;}
+#p_m div span{width: 100px;}
+#p_m div p{flex: 1;}
